main.css
* {
    box-sizing: border-box;
    margin: 0;
}

html, body {
    height: 100%;
}


body {
    font-family: 'Archivo', sans-serif;
    font-size: 14px;
}

header {
    position: fixed;
    height: 70px;
    width: 100%;
    background-color: #ffffff;
    padding: 0 60px;
    box-shadow: rgba(99, 99, 99, 0.05) 0px 2px 12px 0px;
    border-bottom: 1px solid rgba(99, 99, 99, 0.16);
    justify-content: space-between;
    display: flex;
    align-items: center;
}

nav {
}

.logo {
    float: left;
    width: 20%;
    position: relative;
}

.logo h2 {
    font-size: 36px;
    font-weight: 500;
    margin-top: 5px;

}

.logo a {
    text-decoration: none;
    color: #212121;
}

.logo img {
    width: 60px;
    float: left;
    margin-right: -12px;
}

nav a {
    text-decoration: none;
    color: #424242;
    padding: 0 20px;
    font-size: 18px;
}

h1 {
    font-weight: 400;
}

.mobile-nav {
    display: none;
}

.mobile-nav .hamburger_line {
    height: 3px;
    background-color: black;
    width: 28px;
    border-radius: 6px;
    margin: 2px 0;
    animation: rotate .4s ease-in;
}

.mobile-nav_options_container {
    display: none;
}

@keyframes rotate {

    0% {
        transform: rotate(0);
    }

    100% {
        transform: rotateY(180deg);
    }
    
}

@media screen and (max-width: 1000px) {
    .mobile-nav {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 0;
    }

    .mobile-nav_options_container {
        display: flex;
        position: absolute;
        width: 100%;
        height: 100%;
        background-color: rgba(0,0,0, 0.8);
        top:0px;
        right:0px;
        bottom:0px;
        left:0px;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        transition: .4s;
        transform: translateX(-100%);
        z-index: 999;
    }

    .mobile-nav_options_container a {
        color: #f2f2f2;
        text-decoration: none;
        font-size: 24px;
        font-weight: 300;
        margin-bottom: 40px;
    }

    #mobile-nav_options_container-exit {
        position: absolute;
        top: 20px;
        right: 40px;
    }

    #mobile-nav_options_container-exit i {
        font-size: 30px;
        color: #f2f2f2;
    }

    nav {
        display: none;
    }

    header {
        padding: 0 30px
    }

    .logo {
        width: 50%;
    }

    .logo img {
        width: 50px;
    }

    .logo h2 {
        font-size: 28px;
    }

}

